# data

./: .dockerignore  .git-blame-ignore-revs  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  rustfmt.toml
crates/archive/: Cargo.toml
crates/archive/src/: archive.rs  chain_builder.rs  chunk_writer.rs  cli.rs  fs.rs  ingest.rs  layout.rs  main.rs  metrics.rs  proc.rs  processor.rs  progress.rs  server.rs  sink.rs  writer.rs
crates/archive/src/fs/: local.rs  mod.rs  s3.rs
crates/array/: Cargo.toml
crates/array/benches/: main.rs
crates/array/fixtures/: solana-instructions.parquet  solana-instructions.sorted.parquet  solana-transactions.parquet
crates/array/src/: access.rs  any.rs  any_data_builder.rs  bitmask.rs  boolean.rs  chunking.rs  data_builder.rs  item_index_cast.rs  lib.rs  list.rs  offsets.rs  primitive.rs  schema_metadata.rs  schema_patch.rs  struct.rs  types.rs  util.rs  visitor.rs
crates/array/src/array_builder/: binary.rs  bitmask.rs  boolean.rs  buffer_writer.rs  list.rs  memory_writer.rs  mod.rs  native.rs  nullmask.rs  offsets.rs  primitive.rs  writer.rs
crates/array/src/builder/: aliases.rs  any.rs  binary.rs  bitmask.rs  boolean.rs  fixed_size_binary.rs  list.rs  memory_writer.rs  mod.rs  native.rs  nullmask.rs  offsets.rs  primitive.rs  struct.rs  table.rs
crates/array/src/index/: index_list.rs  mod.rs  range_list.rs
crates/array/src/io/: bitmask_reader.rs  bitmask_writer.rs  byte_reader.rs  file.rs  mod.rs  native_reader.rs  native_writer.rs  nullmask_reader.rs  nullmask_writer.rs  offsets_reader.rs  offsets_writer.rs
crates/array/src/reader/: any.rs  binary.rs  bitmask.rs  boolean.rs  chunked.rs  fixed_size_list.rs  list.rs  mod.rs  native.rs  nullmask.rs  offsets.rs  primitive.rs  struct.rs
crates/array/src/slice/: any.rs  bitmask.rs  boolean.rs  fixed_size_list.rs  list.rs  mod.rs  native.rs  nullmask.rs  primitive.rs  struct.rs
crates/array/src/sort/: functions.rs  mod.rs  order.rs  sorting.rs
crates/array/src/writer/: any.rs  mod.rs  range_list.rs
crates/array/tests/: fixtures.rs  primitives.rs
crates/bds/: Cargo.toml
crates/bds/src/: block.rs  chain.rs  chain_sender.rs  chain_watch.rs  data_source.rs  ingest.rs  main.rs  types.rs  util.rs
crates/bds/src/cassandra/: block_batch.rs  ingest.rs  ingest_store.rs  mod.rs  row_batch.rs  store.rs  types.rs
crates/bds/src/cmd/: ingest.rs  mod.rs  util.rs
crates/bds/src/ingest/: data_source.rs  grow.rs  ingest.rs  mod.rs  store.rs  (+1 more)
crates/data/: Cargo.toml
crates/data-client/: Cargo.toml  RELIABLE.md
crates/data-client/examples/: combined-client.rs  simple-client.rs
crates/data-client/src/: block_ref.rs  boxed.rs  client.rs  lib.rs  lines.rs  stream.rs  types.rs
crates/data-core/: Cargo.toml
crates/data-core/fixtures/: ethereum-transactions.parquet  ethereum-transactions.sorted.parquet
crates/data-core/src/: builder.rs  chunk_builder.rs  chunk_processor.rs  downcast.rs  lib.rs  serde.rs  struct_builder.rs  table_builder.rs  table_file.rs  table_processor.rs  table_sort.rs
crates/data-core/tests/: in_memory_prepare.rs  processor_reuse.rs  sorter.rs
crates/data-source/: Cargo.toml
crates/data-source/src/: lib.rs  map.rs  metrics.rs  standard.rs  types.rs
crates/data-types/: Cargo.toml
crates/data-types/src/: lib.rs
crates/data/benches/: flush_spill.rs
crates/data/src/: lib.rs  types.rs
crates/data/tests/: in_memory_prepare_real_schemas.rs
crates/hotblocks/: Cargo.toml
crates/hotblocks-harness/: Cargo.toml  README.md
crates/hotblocks-harness/src/: compare.rs  driver.rs  harness.rs  lib.rs  model.rs  sim.rs  soak.rs  sut.rs  types.rs
crates/hotblocks-retain/: Cargo.toml
crates/hotblocks-retain/src/: cli.rs  datasets.rs  hotblocks.rs  main.rs  status.rs  types.rs
crates/hotblocks-sidecar/: Cargo.toml
crates/hotblocks-sidecar/src/: cli.rs  hotblocks.rs  main.rs  status.rs  types.rs
crates/hotblocks/spec/: 01-overview.md  02-data-model.md  03-write-path.md  04-read-path.md  05-consistency-and-durability.md  06-invariants.md  07-liveness.md  08-failure-model.md  09-retention-and-space.md  10-performance.md  11-observability.md  12-conformance-tdd.md  13-interface-binding.md  14-parameters.md  README.md  audit-2026-07-12.md
crates/hotblocks/src/: api.rs  cli.rs  data_service.rs  dataset_config.rs  encoding.rs  error.rs  errors.rs  lib.rs  main.rs  metrics.rs  types.rs
crates/hotblocks/tests/: block_hash_index.rs  ct1_happy_path.rs  ct2_shutdown.rs  ct4_finality.rs  ct4_lagging_source.rs  ct5_error_soundness.rs  ct7_stall_and_churn.rs  ct9_source_faults.rs  instance_header.rs  peak_rss.rs  readiness_metrics.rs  transaction_hash_index.rs
crates/hotblocks/utils/: check_retention.py
crates/node/: Cargo.toml
crates/node-example/: Cargo.toml
crates/node-example/src/: app.rs  cli.rs  dataset_config.rs  main.rs
crates/node/benches/: main.rs
crates/node/src/: cli.rs  config.rs  dataset_kind.rs  error.rs  ingest.rs  lib.rs  main.rs  node.rs  query.rs  types.rs
crates/polars/: Cargo.toml
crates/polars/src/: arrow.rs  lib.rs  prelude.rs
crates/primitives/: Cargo.toml
crates/primitives/src/: lib.rs  sid.rs  types.rs
crates/query/: Cargo.toml
crates/query/benches/: main.rs
crates/query/docs/: evm-query-syntax.md
crates/query/fixtures/: .gitattributes
crates/query/src/: json_writer.rs  lib.rs  main.rs  primitives.rs  util.rs
crates/query/tests/: fixtures.rs
crates/reclaim-measure/: Cargo.toml
crates/reclaim-measure/src/: main.rs
crates/storage/: Cargo.toml
crates/storage/benches/: transaction_hash_index.rs
crates/storage/src/: kv.rs  lib.rs  main.rs  primitives.rs  range.rs  util.rs
crates/storage/tests/: arb_array.rs  block_hash_index.rs  cleanup_reclaim.rs  compaction.proptest-regressions  compaction.rs  database_ops.rs  rocksdb_properties.rs  transaction_hash_index.rs  utils.rs  write_read.proptest-regressions  write_read.rs
crates/writer/: Cargo.toml
crates/writer/src/: array_builder.rs  downcast.rs  fs.rs  ingest.rs  lib.rs  primitives.rs  row.rs  row_processor.rs  sink.rs  sorter.rs  util.rs
(+618 files in other folders)
