[workspace]
members = [
    "crates/archive",
    "crates/array",
    "crates/data",
    "crates/data-client",
    "crates/data-core",
    "crates/dataset",
    "crates/node",
    "crates/node-example",
    "crates/polars",
    "crates/primitives",
    "crates/query",
    "crates/storage"
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
arrow = { version = "53.0.0", default-features = false }
arrow-buffer = "53.0.0"
async-stream = "0.3.6"
borsh = { version = "1.5.1", features = ["derive"] }
bytes = "1.9.0"
clap = "4.5.26"
flate2 = "1.0.35"
futures = "0.3.31"
futures-timer = "3.0.3"
ouroboros = "0.18.5"
parking_lot = "0.12.3"
parquet = "53.0.0"
proptest = "1.4.0"
rayon = "1.10.0"
reqwest = "0.12.11"
scopeguard = "1.2.0"
serde = "1.0.203"
serde_json = "1.0.118"
tempfile = "3.13.0"
tokio = "1.42.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

#[profile.release]
#debug = 1
#codegen-units = 128
#
#[profile.bench]
#codegen-units = 128
