[workspace]
members = [
    "crates/archive",
    "crates/array",
    "crates/bds",
    "crates/data",
    "crates/data-client",
    "crates/data-core",
    "crates/data-source",
    "crates/dataset",
    "crates/node",
    "crates/node-example",
    "crates/polars",
    "crates/primitives",
    "crates/query",
    "crates/query-example",
    "crates/storage"
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
arrow = { version = "54.1.0", default-features = false }
arrow-buffer = "54.1.0"
async-stream = "0.3.6"
async-trait = "0.1.88"
axum = "0.8.1"
borsh = { version = "1.5.1", features = ["derive"] }
bytes = "1.9.0"
chrono = "0.4.34"
clap = "4.5.26"
flate2 = "1.0.35"
futures = "0.3.31"
ouroboros = "0.18.5"
parking_lot = "0.12.3"
parquet = "54.1.0"
proptest = "1.4.0"
rayon = "1.10.0"
reqwest = { git = "https://github.com/subsquid/reqwest.git", rev = "620aa86a", version = "0.12.12" }
uuid = "1.17.0"
scopeguard = "1.2.0"
serde = "1.0.203"
serde_json = "1.0.118"
scylla = "1.1.0"
tempfile = "3.13.0"
tokio = "1.42.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"
valuable = "0.1.1"
