[package]
name = "sqd-archive"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
arrow = { workspace = true }
async-stream = { workspace = true }
async-trait = "0.1.83"
aws-config = { version = "1.5.9", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.59.0", features = ["rt-tokio"] }
axum = { workspace = true }
clap = { version = "4.5.9", features = ["derive"] }
futures = { workspace = true }
parquet = { workspace = true }
prometheus-client = "0.23.0"
rayon = { workspace = true }
regex = "1.11.1"
reqwest = { workspace = true, features = ["json", "gzip", "stream"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqd-data = { path = "../data" }
sqd-data-core = { path = "../data-core" }
sqd-dataset = { path = "../dataset" }
sqd-primitives = { path = "../primitives" }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = "0.7.13"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json", "time"] }
url = { workspace = true }

[lints]
workspace = true
