[package]
name = "sqd-array"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
arrow = { workspace = true }
arrow-buffer = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
criterion = "0.5.1"
parquet = { workspace = true }

[[bench]]
name = "main"
harness = false
