[package]
name = "sqd-array"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
arrow = { workspace = true }
arrow-buffer = { workspace = true }
parking_lot = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
criterion = "0.5.1"
parquet = { workspace = true }
proptest = "1.5.0"

[[bench]]
name = "main"
harness = false
