[package]
name = "sqd-data-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true, features = ["std"] }
bytes = { workspace = true }
futures-core = "0.3.31"
futures-timer = "3.0.3"
reqwest = { version = "0.12.9", features = ["json", "gzip", "stream"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqd-data-types = { path = "../data-types", features = ["de"] }