[package]
name = "sqd-data-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true, features = ["std"] }
bytes = { workspace = true }
futures = { workspace = true }
futures-timer = { workspace = true }
reqwest = { workspace = true, features = ["json", "gzip", "stream"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqd-primitives = { path = "../primitives", features = ["from_json_bytes", "serde"] }
tracing = { workspace = true }