[package]
name = "sqd-data-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
arrow = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqd-array = { path = "../array" }
sqd-dataset = { path = "../dataset" }

[dev-dependencies]
parquet = { workspace = true }