[package]
name = "sqd-data"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow = { workspace = true }
arrow-buffer = { workspace = true }
bs58 = "0.5.1"
lazy_static = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
sqd-dataset = { path = "../dataset" }
sqd-polars = { path = "../polars" }
sqd-primitives = { path = "../primitives" }

[dev-dependencies]
proptest = { workspace = true }
