[package]
name = "sqd-hotblocks"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-stream = "0.3.6"
axum = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true, features = ["std"] }
clap =  { workspace = true, features = ["derive"] }
either = "1.13.0"
flate2 = { workspace = true }
futures = { workspace = true }
ouroboros = { workspace = true }
parking_lot = { workspace = true }
prometheus-client = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sqd-data = { path = "../data" }
sqd-data-client = { path = "../data-client" }
sqd-data-core = { path = "../data-core" }
sqd-data-source = { path = "../data-source" }
sqd-dataset = { path = "../dataset" }
sqd-polars = { path = "../polars" }
sqd-primitives = { path = "../primitives", features = ["valuable"] }
sqd-query = { path = "../query", features = ["storage"] }
sqd-storage = { path = "../storage" }
tikv-jemallocator = "0.6.0"
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true, features = ["valuable"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "json", "valuable"] }
url = { workspace = true, features = ["serde"] }