[package]
name = "sqd-node-example"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-stream = { workspace = true }
axum = { workspace = true }
clap =  { workspace = true, features = ["derive"] }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqd-node = { path = "../node" }
sqd-polars = { path = "../polars" }
sqd-storage = { path = "../storage" }
tikv-jemallocator = "0.6.0"
tokio = { workspace = true, features = ["full"] }
tower-http = { version = "0.6.2", features = ["timeout"]}
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url = { workspace = true, features = ["serde"] }
