[package]
name = "sqd-node"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
either = "1.13.0"
futures = { workspace = true }
reqwest = { workspace = true }
parking_lot = { workspace = true }
sqd-data = { path = "../data" }
sqd-data-client = { path = "../data-client" }
sqd-data-core = { path = "../data-core" }
sqd-dataset = { path = "../dataset" }
sqd-primitives = { path = "../primitives", features = ["serde_json", "from_json_bytes"] }
sqd-query = { path = "../query", features = ["storage"] }
sqd-storage = { path = "../storage" }
tracing = { workspace = true }