[package]
name = "sqd-node"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
either = "1.13.0"
flate2 = { workspace = true }
futures = { workspace = true }
ouroboros = { workspace = true }
parking_lot = { workspace = true }
reqwest = { workspace = true }
scopeguard = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqd-data = { path = "../data" }
sqd-data-client = { path = "../data-client" }
sqd-data-core = { path = "../data-core" }
sqd-data-source = { path = "../data-source" }
sqd-dataset = { path = "../dataset" }
sqd-polars = { path = "../polars" }
sqd-primitives = { path = "../primitives" }
sqd-query = { path = "../query", features = ["storage"] }
sqd-storage = { path = "../storage" }
tokio = { workspace = true, features = ["macros"] }
tracing = { workspace = true }