[package]
name = "sqd-polars"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
arrow = { workspace = true }
polars-arrow = { version = "0.42.0", features = ["arrow_rs"] }
polars-core = "0.42.0"

[dependencies.polars]
version = "0.42.0"
default-features = false
features = [
    "cum_agg",
    "dtype-full",
    "fmt",
    "lazy",
    "semi_anti_join",
]