[package]
name = "sqd-polars"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
arrow = { workspace = true }
polars-arrow = { version = "0.43.1", features = ["arrow_rs"] }
polars-core = "0.43.1"

[dependencies.polars]
version = "0.43.1"
default-features = false
features = [
    "cum_agg",
    "dtype-full",
    "fmt",
    "is_in",
    "lazy",
    "semi_anti_join"
]

[lints]
workspace = true
