[package]
name = "sqd-query"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
arrow = { workspace = true, features = ["prettyprint"] }
bytes = "1.6.0"
convert_case = "0.6.0"
dashmap = "6.0.1"
identconv = "0.2.0"
lazy_static = { workspace = true }
lexical-core = "0.8.5"
memmap2 = { version = "0.9.4", optional = true }
parking_lot = { workspace = true }
parquet = { workspace = true, optional = true }
rayon = { workspace = true }
serde = { workspace = true, features = ["derive", "serde_derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
sqd-polars = { path = "../polars" }
sqd-primitives = { path = "../primitives" }
sqd-storage = { path = "../storage", optional = true }

[dev-dependencies]
criterion = "0.5.1"
glob = "0.3.1"
rstest = "0.21.0"
tempfile = "3.10.1"
parquet = { workspace = true }
sqd-dataset = { path = "../dataset" }
sqd-data = { path = "../data" }
mimalloc = "0.1.43"

[features]
parquet = [
    "dep:parquet",
    "dep:memmap2"
]
storage = [
    "dep:sqd-storage"
]

[[bench]]
name = "main"
harness = false
required-features = ["storage", "parquet"]