[package]
name = "sqd-query"
version = "0.1.0"
edition = "2021"
autobenches = false

[dependencies]
anyhow = { workspace = true }
arrow = { workspace = true, features = ["prettyprint"] }
bytes = { workspace = true }
convert_case = "0.6.0"
dashmap = "6.0.1"
divan = { version = "0.1.17", optional = true }
faster-hex = "0.10.0"
identconv = "0.2.0"
lexical-core = "1.0.2"
memmap2 = { version = "0.9.4", optional = true }
parking_lot = { workspace = true }
parquet = { workspace = true, optional = true }
rayon = { workspace = true }
serde = { workspace = true, features = ["derive", "serde_derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
sqd-bloom-filter = { path = "../bloom-filter" }
sqd-polars = { path = "../polars" }
sqd-primitives = { path = "../primitives", features = ["range"] }
sqd-storage = { path = "../storage", optional = true }

[dev-dependencies]
glob = "0.3.1"
rstest = "0.21.0"
tempfile = { workspace = true }
parquet = { workspace = true }
sqd-data = { path = "../data" }
sqd-data-core = { path = "../data-core" }
sqd-dataset = { path = "../dataset" }
#mimalloc = "0.1.43"
tikv-jemallocator = "0.6"

[features]
parquet = [
    "dep:parquet",
    "dep:memmap2"
]
storage = [
    "dep:sqd-storage"
]
_bench = [
    "dep:divan"
]
_bench_query = [
    "dep:divan",
    "parquet",
    "storage"
]

[[bench]]
name = "main"
harness = false