[package]
name = "sqd-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
arrow = { workspace = true, features = ["arrow-ipc", "ipc", "prettyprint"] }
arrow-buffer = { workspace = true }
borsh = { workspace = true }
parking_lot = { workspace = true }
rayon = { workspace = true }
rocksdb = { version = "0.23.0", features = ["jemalloc"] }
uuid = { workspace = true, features = ["v7", "borsh"] }
sqd-array = { path = "../array" }
sqd-primitives = { path = "../primitives", features = ["borsh", "sid", "range"] }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
rand = "0.9.0"

[lints]
workspace = true
