[package]
name = "sqd-writer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
arrow = { workspace = true }
arrow-buffer = { workspace = true }
aws-sdk-s3 = { version = "1.32.0", features = ["rt-tokio"] }
aws-config = { version = "1.5.0", features = ["behavior-version-latest"] }
bincode = "2.0.0-rc.3"
clap = { version = "4.5.4", features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tempfile = "3.10.1"
ureq = { version = "2.9.7", features = ["json"] }
url = "2.5.1"
regex = "1.10.5"
bs58 = "0.5.1"
parquet = { workspace = true }
arrow-schema = "52.0.0"
futures = "0.3.30"

[dev-dependencies]
proptest = "1.4.0"
